--- a/03-The Box Model/Project-Margin-and-padding/css/styles.css
+++ b/03-The Box Model/Project-Margin-and-padding/css/styles.css
@@ -53,6 +53,7 @@ header {
   text-decoration: none;
   padding: 8px;
   border-radius: 4px;
+  display: inline-block;
 }
 .projects .btn:hover {
   background: rgba(47, 48, 97, 80%);
