Project: Float and box model fix summary done

--- a/05-Introduction to float/project-float-and-box-model-fix/css/styles.css
+++ b/05-Introduction to float/project-float-and-box-model-fix/css/styles.css
@@ -89,7 +89,10 @@ header {
 .project-item {
   overflow: hidden;
   border-bottom: 1px dashed #343434;
-  padding: 500px 0;
+  padding: 25px 0;
+}
+.project-item h3 {
+  margin-top: 0px;
 }
 
 /* Work Experience
